--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,6 +10,8 @@
   "point2": "Translating UI/UX designs into code and customizing for client needs.",
   "point3": "Building modern components using Tailwind CSS & Shadcn.",
   "point4": "Optimizing web pages for SEO and performance.",
+  "project": "Projects",
+  "articles": "Articles",
   "projects": [
     {
       "title": "Cupon Finder",
